[tool.poetry]
name = "file-finder"
version = "0.1.0"
description = ""
authors = ["Dgeison <dgeison.peixoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
